Fix alignments

--- a/static/less/_scaffolding.less
+++ b/static/less/_scaffolding.less
@@ -69,6 +69,7 @@ body {
         display: block;
         position: relative;
         text-decoration: none;
+        border-left: 4px solid transparent;
 
         &:hover {
           color: @white;
